# unused_rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/: multiple_unused.rs  producer.rs
src/: contravariant.rs  covariant.rs  end.rs  inner.rs  invariant.rs  lib.rs  tests.rs  unused.rs
